--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -113,6 +113,13 @@ p {
   margin-bottom: var(--16px);
 }
 
+button {
+  border: none;
+  background: none;
+  padding: 0;
+  cursor: pointer;
+}
+
 .grid-layout {
   width: 90%;
   margin: 0 auto;
